# report-creator

./: .editorconfig  README.md  firebase.json  pyproject.toml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/auth/: api_key.py
backend/services/: email_service.py  format_service.py  split_detail_service.py  split_service.py  text_processor.py  text_splitter.py
frontend/: global.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  tailwind.css
frontend/src/components/: ApiKeyInput.tsx  CustomizePrompt.tsx  EmailInput.tsx  PromptInput.tsx  TextInput.tsx
frontend/src/services/: api.ts
