[tool.poetry]
name = "report-creator"
version = "0.1.0"
description = ""
authors = ["Ryo Nagaoka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.30.5"
pydantic = "2.8.2"
python-dotenv = "1.0.1"
google-generativeai = "0.7.2"
tiktoken = "^0.7.0"
firebase-functions = "^0.4.2"
flask = {extras = ["async"], version = "^3.0.3"}
flask-cors = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
